--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -2,8 +2,9 @@ name: Feature Flag Check
 
 on:
   pull_request:
+    types: [opened]
     paths:
-      - 'RootView.swift'  # FeatureFlag.swift に変更があった場合に実行
+      - 'RootView.swift'
 
 jobs:
   add_label:
