--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -3,7 +3,7 @@ name: Feature Flag Check
 on:
   pull_request:
     types: [opened]
-
+    
 jobs:
   add_label:
     runs-on: ubuntu-latest
@@ -11,11 +11,12 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # フルヒストリを取得
 
       - name: Check for ABHotFlags changes in FeatureFlag.swift
         id: check_diff
         run: |
-          # FeatureFlag.swiftの差分を抽出し、「ABHotFlags」というキーワードがあるかチェックする
           if git diff --unified=0 ${{ github.event.pull_request.base.sha }} ${{ github.event.pull_request.head.sha }} -- RootView.swift | grep -q "RootView"; then
             echo "FLAG_CHANGED=true" >> $GITHUB_ENV
           else
@@ -27,4 +28,4 @@ jobs:
         uses: actions-ecosystem/action-add-labels@v1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          labels: "bug"
+          labels: "Feature Release"
