--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,31 +1,52 @@
-name: Feature Flag Check
 
+name: Feature Flag Check
 on:
   pull_request:
-    types: [opened]
+    types: [opened, synchronize]
     
 jobs:
   add_label:
     runs-on: ubuntu-latest
-
+    permissions:
+      contents: read
+      pull-requests: write
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
           fetch-depth: 0  # フルヒストリを取得
-
-      - name: Check for ABHotFlags changes in FeatureFlag.swift
-        id: check_diff
+          
+      - name: Check for RootView changes
+        id: check_changes
         run: |
-          if git diff --unified=0 ${{ github.event.pull_request.base.sha }} ${{ github.event.pull_request.head.sha }} -- RootView.swift | grep -q "RootView"; then
+          # ベースブランチを取得
+          git fetch origin ${{ github.base_ref }}
+          
+          # RootView.swiftファイルの変更をチェック
+          if git diff --name-only origin/${{ github.base_ref }}..HEAD | grep -q "RootView.swift"; then
             echo "FLAG_CHANGED=true" >> $GITHUB_ENV
+            echo "::set-output name=changed::true"
           else
             echo "FLAG_CHANGED=false" >> $GITHUB_ENV
+            echo "::set-output name=changed::false"
           fi
-
-      - name: Add Feature Release label
+          
+      - name: Add bug label
         if: env.FLAG_CHANGED == 'true'
         uses: actions-ecosystem/action-add-labels@v1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           labels: "bug"
+          
+      - name: Comment on PR
+        if: env.FLAG_CHANGED == 'true'
+        uses: actions/github-script@v6
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: '⚠️ このPRはRootView.swiftファイルに変更があります。コードレビューにて特に注意してください。'
+            })
