--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -3,6 +3,8 @@ name: Feature Flag Check
 on:
   pull_request:
     types: [opened, synchronize]
+    paths: 
+      - 'RootView.swift'
     
 jobs:
   add_label:
