--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,4 +1,3 @@
-
 name: Feature Flag Check
 on:
   pull_request:
@@ -14,7 +13,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          fetch-depth: 200
+          fetch-depth: 500 # 過去500コミットまで遡る
           
       - name: Check for RootView changes
         id: check_changes
@@ -22,24 +21,33 @@ jobs:
           # ベースブランチを取得
           git fetch origin ${{ github.base_ref }}
           
-          # ベースコミットからDemoブロックを抽出
-　　　　　　git show ${{ github.event.pull_request.base.sha }}:RootView.swift 2>/dev/null | sed -n '/struct Demo</,/\}$/p' > base_demo.txt || echo "" > base_demo.txt
-      
-          # HEADコミットからDemoブロックを抽出
-          git show HEAD:RootView.swift 2>/dev/null | sed -n '/struct Demo</,/\}$/p' > head_demo.txt || echo "" > head_demo.txt
-          
-          # 結果を比較する
-          if diff base_demo.txt head_demo.txt > /dev/null; then
-            echo "FLAG_CHANGED=false" >> $GITHUB_ENV
-            echo "::set-output name=changed::false"
-          else
+          # RootView.swiftファイルの変更をチェック
+          if git diff --name-only origin/${{ github.base_ref }}..HEAD | grep -q "RootView.swift"; then
             echo "FLAG_CHANGED=true" >> $GITHUB_ENV
             echo "::set-output name=changed::true"
+          else
+            echo "FLAG_CHANGED=false" >> $GITHUB_ENV
+            echo "::set-output name=changed::false"
           fi
           
       - name: Add bug label
         if: env.FLAG_CHANGED == 'true'
         uses: actions-ecosystem/action-add-labels@v1
         with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          labels: "bug"
+          
+      - name: Comment on PR
+        if: env.FLAG_CHANGED == 'true'
+        uses: actions/github-script@v6
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: '📝 このPRはRootView.swiftファイルに変更があります。FeatureRelease Labelの必要か確認してください！'
+            })
           github_token: ${{ secrets.GITHUB_TOKEN }}
           labels: "bug"
